WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24004
REGRESSION: Ordered list item marker misaligned when line height is not 1.2
https://bugs.webkit.org/show_bug.cgi?id=24004
Summary
REGRESSION: Ordered list item marker misaligned when line height is not 1.2
Darin Richardson
Reported
2009-02-18 10:22:45 PST
When line height is specified via CSS to a value not 1.2 (or variations like 120% or 1.2em), the list item marker's baseline doesn't align with the baseline of the first line of text inside the list item. It's misaligned regardless of applying the line height to the ol or the li and regardless of the marker type specified.
Attachments
Test file demonstrating misalignment in list item markers
(1.38 KB, text/html)
2009-02-18 10:23 PST
,
Darin Richardson
no flags
Details
Screenshot demonstrating correct rendering in Safari 3.2.1
(37.35 KB, image/png)
2009-02-18 10:36 PST
,
Darin Richardson
no flags
Details
Patch
(26.66 KB, patch)
2009-02-24 12:52 PST
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Richardson
Comment 1
2009-02-18 10:23:56 PST
Created
attachment 27756
[details]
Test file demonstrating misalignment in list item markers
Darin Richardson
Comment 2
2009-02-18 10:35:09 PST
Occurs in nightly
r41018
. Safari 3.2.1 renders the lists correctly.
Darin Richardson
Comment 3
2009-02-18 10:36:28 PST
Created
attachment 27757
[details]
Screenshot demonstrating correct rendering in Safari 3.2.1
Mark Rowe (bdash)
Comment 4
2009-02-19 02:33:33 PST
<
rdar://problem/6602506
>
Gavin Sherlock
Comment 5
2009-02-23 11:19:17 PST
bisect-builds.pl says: Works:
r40813
Fails:
r40884
Beth Dakin
Comment 6
2009-02-23 13:02:49 PST
Using internal tools, I was able to narrow this down slightly more to between 40828 and 40884.
Beth Dakin
Comment 7
2009-02-24 12:20:55 PST
Oh man. I see the problem. I will have a patch up very soon. This regressed with
http://trac.webkit.org/changeset/40880
Beth Dakin
Comment 8
2009-02-24 12:52:11 PST
Created
attachment 27926
[details]
Patch
Beth Dakin
Comment 9
2009-02-24 13:34:53 PST
Thanks, Sam! Fixed with revision 41188.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug