WebCore:

2009-02-24  Beth Dakin  <bdakin@apple.com>

        Reviewed by Sam Weinig.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=24004 REGRESSION:
        Ordered list item marker misaligned when line height is not 1.2
        -and corresponding <rdar://problem/6602506>

        This is a regression from http://trac.webkit.org/changeset/40880
        where createInlineBox was taken off of RenderObject and moved to
        RenderBox. The problem was that the RenderBox version still needs
        to be virtual because there is still an existing implementation in
        RenderListMarker.

        * rendering/RenderBox.h:
        * rendering/RenderListMarker.cpp:
        (WebCore::RenderListMarker::createInlineBox):
        * rendering/RenderListMarker.h:

LayoutTests:

2009-02-24  Beth Dakin  <bdakin@apple.com>

        Reviewed by Sam Weinig.

        Test for https://bugs.webkit.org/show_bug.cgi?id=24004 REGRESSION:
        Ordered list item marker misaligned when line height is not 1.2
        -and corresponding <rdar://problem/6602506>

        * fast/lists/list-marker-with-line-height.html: Added.
        * platform/mac/fast/lists/list-marker-with-line-height-expected.checksum: Added.
        * platform/mac/fast/lists/list-marker-with-line-height-expected.png: Added.
        * platform/mac/fast/lists/list-marker-with-line-height-expected.txt: Added.



Canonical link: https://commits.webkit.org/33263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41188 268f45cc-cd09-0410-ab3c-d52691b4dbfc